[project]
name = "hype-cutter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "ddgs>=9.12.0",
    "duckduckgo-search>=8.1.1",
    "litellm>=1.82.6",
    "smolagents>=1.24.0",
    "streamlit>=1.55.0",
    "watchdog>=6.0.0",
]
